--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <title>sq</title>
     <meta charset="utf-8">
-    <meta name="description" content="Making squares.">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <meta name="description" content="Making squares.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="stylesheet" href="https://unpkg.com/tachyons@4.7.0/css/tachyons.min.css"/>
     <link rel="apple-touch-icon" href="sq.png">
     <link rel="icon" href="fav.png">
