--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </label>
       <a class="o-save fl mb3 dn no-underline tc bg-green white bn pa3 courier w-50" target="_blank" download>save</a>
       </div>
-      <input type="file" id="choose-file" class="o-select-file w1 absolute outline-0">
+      <input type="file" id="choose-file" class="o-select-file w1 absolute outline-0" multiple="false" accept="image/*">
       <canvas class="o-canvas relative bg-white b--silver w-100 border-box"></canvas>
       <img class="o-image dn relative ba b--silver w-100 border-box">
     </main>
