--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
     <link rel="apple-touch-icon" href="sq.png">
     <link rel="icon" href="fav.png">
   </head>
-  <body class="courier ma0 pa0 f6">
+  <body class="sans-serif ma0 pa0 f6">
     <main class="pa3 measure center">
       <div class="cf">
-      <label for="choose-file" class="o-label fl mb3 db tc border-box bg-black white bn pa3 courier w-100">
-        select file
+      <label for="choose-file" class="o-label fl mb3 db tc border-box ba pa3 w-100">
+        Select file
       </label>
-      <a href="#" class="o-save fl mb3 dn no-underline tc bg-green white bn pa3 courier w-50" download="sq.jpg">save</a>
+      <a href="#" class="o-save fl mb3 dn no-underline tc border-box green ba pa3 sans-serif w-50" download="sq.jpg">Save</a>
       </div>
       <input type="file" id="choose-file" class="o-select-file w1 absolute outline-0" multiple="false" accept="image/*">
       <canvas class="o-canvas relative bg-white b--silver w-100 border-box"></canvas>
       <img class="o-image dn relative ba b--silver w-100 border-box" alt="result">
+      <p class="o-no-download-message tc dn">Long press on the image to save.</p>
     </main>
 
     <script type="text/javascript">
@@ -30,6 +31,7 @@
       const label = document.querySelector('.o-label')
       const fileButton = document.querySelector('.o-select-file')
       const saveButton = document.querySelector('.o-save')
+      const saveMessage = document.querySelector('.o-no-download-message')
       const limit = 2800
       const supportDownload = !navigator.userAgent.match(/iPhone/)
 
@@ -79,8 +81,10 @@
         if (image) {
           if (supportDownload) {
             URL.revokeObjectURL(saveButton.href)
-            label.classList.add('w-50')
+            label.classList.add('w-50', 'br-0')
             label.classList.remove('w-100')
+          } else {
+            saveMessage.classList.remove('dn')
           }
 
           loadImage(URL.createObjectURL(image))
