--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="cf">
       <input type="file" id="choose-file" class="o-select-file w1 absolute outline-0" multiple="false" accept="image/*">
       <label for="choose-file" class="o-label fl mb3 db tc border-box ba pa3 w-100 bg-white relative">
-        Select file
+        Choose files
       </label>
       <a href="#" class="o-save fl bb-0 dn no-underline tc border-box green ba pa3 sans-serif w-100" download="sq.jpg">Save</a>
       </div>
